--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,7 @@
 ---
-title: "fusionACS"
+title: "Home"
+format: html
+page-layout: full
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+<meta http-equiv="refresh" content="0; url=about.html">
