--- a/website/references.bib
+++ b/website/references.bib
@@ -1,3 +1,14 @@
+@article{Agresti1998,
+  title={Approximate is better than exact for interval estimation of binomial proportions},
+  author={Agresti, Alan and Coull, Brent A.},
+  journal={The American Statistician},
+  volume={52},
+  number={2},
+  pages={119--126},
+  year={1998},
+  publisher={Taylor & Francis}
+}
+
 @article{Barnard1999,
   author    = {John Barnard and Donald B. Rubin},
   title     = {Small-Sample Degrees of Freedom with Multiple Imputation},
@@ -40,7 +51,6 @@
   url       = {https://papers.nips.cc/paper/6907-lightgbm-a-highly-efficient-gradient-boosting-decision-tree}
 }
 
-
 @book{Kish1965,
   title     = {Survey Sampling},
   author    = {Kish, Leslie},
@@ -74,7 +84,7 @@
   author       = {Barbara M. Parmenter and Janet Lau},
   title        = {Estimating and Mapping Reliability for American Community Survey Data},
   year         = {2013},
-  howpublished = {\url{https://sites.tufts.edu/gis/files/2013/11/Amercian-Community-Survey_Margin-of-error-tutorial.pdf}},
+  howpublished = {https://sites.tufts.edu/gis/files/2013/11/Amercian-Community-Survey_Margin-of-error-tutorial.pdf},
   note         = {Accessed: 2025-04-17}
 }
 
@@ -107,5 +117,33 @@
   doi = {10.1038/s41597-023-02788-7},
   url = {https://www.nature.com/articles/s41597-023-02788-7},
   publisher = {Nature Publishing Group}
+}
+
+
+@book{Serfling1980,
+  title     = {Approximation Theorems of Mathematical Statistics},
+  author    = {Serfling, Robert J.},
+  year      = {1980},
+  publisher = {Wiley},
+  address   = {New York},
+  isbn      = {978-0-471-03444-0}
+}
+
+@Manual{Krantz2025,
+  title = {collapse: Advanced and Fast Data Transformation in R},
+  author = {Sebastian Krantz},
+  year = {2025},
+  note = {R package version 2.1.1},
+  doi = {10.5281/zenodo.8433090},
+  url = {https://sebkrantz.github.io/collapse/},
+}
+
+@book{Koenker2005,
+  title     = {Quantile Regression},
+  author    = {Koenker, Roger},
+  year      = {2005},
+  publisher = {Cambridge University Press},
+  address   = {Cambridge},
+  isbn      = {9780521845731}
 }
 
