Add Methods section to website.

--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -147,3 +147,13 @@
   isbn      = {9780521845731}
 }
 
+@misc{Census2020,
+  author       = {{U.S. Census Bureau}},
+  title        = {American Community Survey: Design and Methodology (Chapter 12: Accuracy of the Data)},
+  year         = {2020},
+  howpublished = {\url{https://www.census.gov/programs-surveys/acs/methodology/design-and-methodology.html}},
+  note         = {Accessed: 2025-07-25},
+  institution  = {U.S. Department of Commerce, Economics and Statistics Administration, U.S. Census Bureau}
+}
+
+
