--- a/README.Rmd
+++ b/README.Rmd
@@ -21,9 +21,9 @@ The fusionACS *R* package allows users to access and analyze a "pseudo-sample" o
 
 The pseudo-sample contains a single record (observation) for each ACS respondent (households and persons) for the period 2015-2019. Each record includes actual/observed values for all variables in the ACS, as well as a single simulation of each variable fused from donor surveys. As a result, the pseudo-sample plausibly mimics how ACS respondents might have answered questions unique to the donor survey questionnaires.
 
-The sample also includes a range of geographic variables – from census region down to individual block groups – for each ACS household. These are obtained by random sampling of the underlying UrbanPop data in such a way that all block groups nationwide are represented.
+The sample also includes a range of geographic variables – from census region down to individual block groups – for each ACS household. Geographic variables smaller than Public Use Microdata Areas (PUMA's) are obtained by random sampling of the underlying UrbanPop data in such a way that all block groups nationwide are represented.
 
-While the sample data cannot be used to derive "final" estimates or the associated margin of error, it *can* be used to do just about everything else a user might normally do during the analysis development and prototyping stages. And for analyses that are not hyper-specific (i.e. involve a comparatively large number of observations) the estimates derived from the pseudo-sample will often be quite close to the true values computed on the full database.
+While the sample data cannot be used to derive "final" production-quality estimates, it *can* be used to do just about everything else a user might normally do during the analysis development and prototyping stages. And for analyses that are not hyper-specific (i.e. involve a comparatively large number of observations) the estimates derived from the pseudo-sample will often be quite close to the true values computed on the full database.
 
 Our hope is that it will eventually be possible to remotely execute a valid analysis -- designed and tested locally -- using the complete fusionACS database and return the full "production" results to the user.
 
